Fix stuck tabbing through imagemaps (bug 124789) by tracking the focused frame separately from the focused content node in this case. r=jkeiser, sr=bzbarsky.